--- a/dos33.html
+++ b/dos33.html
@@ -513,9 +513,20 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <hr>1B76:A2 00          177             LDX #<span class="adr">0</span>                                          ; === Page <a class="page" name="page113">113</a> ===
 1B78:86 40          178             STX ZPGWRK
                     179 <a class="f" name="DR3"         >DR3         </a>EQU *
-
+1B7A:BD 29 1C       180             LDA ADRTAB+1,X                                  ; If only we had an ($BC) LDY ADRTAB+1,X instruction ... 
+1B7D:A8             181             TAY                                             ; <a class="mem" name="_1B7D">wastes</a> 1 byte; ... for this useless instruction
+1B7E:BD 2A 1C       182             LDA ADRTAB+2,X                                  ; Evidently of the code quality to come. :-/
+1B81:85 41          183             STA ZPGWRK+1
+1B83:4C 93 1B       184             JMP DR5                                         ; <a class="mem" name="_1B83">wastes</a> 1 byte; BNE
+                    185 ;
                     186 <a class="f" name="DR4"         >DR4         </a>EQU *
-
+                    187             CLC
+                    188             LDA (ZPGWRK),Y
+                    189             ADC DELTA
+                    190             STA (ZPGWRK),Y
+                    191             INY
+                    192             BNE DR5
+                    193             INC ZPGWRK+1
 ####:C8             194 <a class="f" name="DR5"         >DR5         </a>INY
 
                     198 <a class="f" name="DR6"         >DR6         </a>EQU *
@@ -594,48 +605,49 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     284 ;
 1C25:4C 54 1E       285 <a class="f" name="DR11" id="DR11"       >DR11        </a>JMP <a class="x" href="#DBVECT">DBVECT</a>+3    ; DONE                          ; <a class="file" href="#DOSINIT">DOSINIT</a>, Page <a class="page" href="#page51">51</a> -&gt; JMP <a class="x" href="#DBINIT">DBINIT</a>
                     286             PAGE
-1C28:24             287 <a class="f" name="ADRTAB"     id="ADRTAB"     >ADRTAB      </a>DFB 9*4
-1C29:00 1D          288             DW  <a class="v" href="#SAT1"  >SAT1</a>
-1C2B:56 1D          289             DW  <a class="v" href="#EAT1"  >EAT1</a>
-1C2D:58 1D          290             DW  <a class="v" href="#RUN"   >RUN</a>
-1C2F:5A 1D          291             DW  <a class="v" href="#RUN"   >RUN+2</a>
-1C31:64 1D          292             DW  <a class="v" href="#IBVT"  >IBVT+2</a>
-1C33:66 1D          293             DW  <a class="v" href="#IBVT"  >IBVT+4</a>
-1C35:6C 1D          294             DW  <a class="v" href="#AS1VT" >AS1VT</a>
+1C28:24             287 <a class="f" name="ADRTAB"     id="ADRTAB"     >ADRTAB      </a>DFB 9*4                                         ; int AddressRelocTable[ 9 ]
+1C29:00 1D          288             DW  <a class="v" href="#SAT1"  >SAT1   </a>                                     ; [0] Start Address Table 1 in <a class="x" href="#DOSINIT">DOSINIT</a>
+1C2B:56 1D          289             DW  <a class="v" href="#EAT1"  >EAT1   </a>                                     ;     End   Address Table 1
+1C2D:58 1D          290             DW  <a class="v" href="#RUN"   >RUN    </a>                                     ; [1]
+1C2F:5A 1D          291             DW  <a class="v" href="#RUN"   >RUN+2  </a>
+1C31:64 1D          292             DW  <a class="v" href="#IBVT"  >IBVT+2 </a>                                     ; [2] Integer Basic Vector Table
+1C33:66 1D          293             DW  <a class="v" href="#IBVT"  >IBVT+4 </a>
+1C35:6C 1D          294             DW  <a class="v" href="#AS1VT" >AS1VT  </a>                                     ; [3] Applesoft (ROM) Vector Table
 1C37:70 1D          295             DW  <a class="v" href="#AS1VT" >AS1VT+4</a>
-1C39:78 1D          296             DW  <a class="v" href="#AS2VT" >AS2VT</a>
+1C39:78 1D          296             DW  <a class="v" href="#AS2VT" >AS2VT  </a>                                     ; [4] Applesoft (RAM) Vector Table
 1C3B:7C 1D          297             DW  <a class="v" href="#AS2VT" >AS2VT+4</a>
-1C3D:7E 1D          298             DW  <a class="v" href="#AS2VT" >AS2VT+6</a>
+1C3D:7E 1D          298             DW  <a class="v" href="#AS2VT" >AS2VT+6</a>                                     ; [5] Applesoft (RAM) Vetor Table
 1C3F:80 1D          299             DW  <a class="v" href="#AS2VT" >AS2VT+8</a>
-1C41:C1 2A          300             DW  <a class="v" href="#SAT2"  >SAT2</a>
-1C43:FD 2A          301             DW  <a class="v" href="#EAT2"  >EAT2</a>
-1C45:E4 37          302             DW  <a class="v" href="#BAIOB" >BAIOB</a>
+1C41:C1 2A          300             DW  <a class="v" href="#SAT2"  >SAT2   </a>                                     ; [6] Start Address Table 2 in <a class="x" href="#FDOSENT">FDOSENT</a>
+1C43:FD 2A          301             DW  <a class="v" href="#EAT2"  >EAT2   </a>
+1C45:E4 37          302             DW  <a class="v" href="#BAIOB" >BAIOB  </a>                                     ; [7]
 <hr>1C47:E8 37          303             DW  <a class="v" href="#">ADOSLD+2</a>                                    ; === Page <a class="page" name="page115">115</a> ===
-1C49:EE 37          304             DW  <a class="v" href="#IBDCTP">IBDCTP</a>
-1C4B:F0 37          305             DW  <a class="v" href="#IBDCTP">IBDCTP</a>+2                                    ;
-1C4D:00 00 00 00    306             DFB 0,0,0,0
-1C51:00 00 00 00    307             DFB 0,0,0,0
+1C49:EE 37          304             DW  <a class="v" href="#IBDCTP">IBDCTP </a>                                     ; [8]
+1C4B:F0 37          305             DW  <a class="v" href="#IBDCTP">IBDCTP </a>+2
+1C4D:00 00 00 00    306             DFB 0,0,0,0                                     ; sentinel ? <span class="todo">TODO</span>
+1C51:00 00 00 00    307             DFB 0,0,0,0                                     ; 
 1C55:00 00 00 00    308             DFB 0,0,0,0
-                    309 <a class="d"    name="CDETAB"     id="CDETAB"     >CDETAB      </a>EQU *
+                    309 <a class="d"    name="CDETAB"     id="CDETAB"     >CDETAB      </a>EQU *                                           ; int CodeRelocTable[ 8 ]
+####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
 1C59:20             310             DFB 8*4
-1C5A:84 1D          311             DW  <a class="x" href="#SC1"   >SC1</a>
-1C5C:84 28          312             DW  <a class="x" href="#EC1"   >EC1</a>
-1C5E:FD 2A          313             DW  <a class="x" href="#SC2"   >SC2</a>
-1C60:97 33          314             DW  <a class="x" href="#EC2"   >EC2</a>
-1C62:5D 36          315             DW  <a class="x" href="#SC3"   >SC3</a>
-1C64:E0 37          316             DW  <a class="x" href="#EC3"   >EC3</a>
-1C66:56 3C          317             DW  <a class="x" href="#SWADR1">SWADR1</a>
+1C5A:84 1D          311             DW  <a class="x" href="#SC1"   >SC1   </a>                                      ; [0]
+1C5C:84 28          312             DW  <a class="x" href="#EC1"   >EC1   </a>
+1C5E:FD 2A          313             DW  <a class="x" href="#SC2"   >SC2   </a>                                      ; [1]
+1C60:97 33          314             DW  <a class="x" href="#EC2"   >EC2   </a>
+1C62:5D 36          315             DW  <a class="x" href="#SC3"   >SC3   </a>                                      ; [2]
+1C64:E0 37          316             DW  <a class="x" href="#EC3"   >EC3   </a>
+1C66:56 3C          317             DW  <a class="x" href="#SWADR1">SWADR1</a>                                      ; [3]
 1C68:DF 3C          318             DW  <a class="x" href="#EWADR1">EWADR1</a>
-1C6A:00 38          319             DW  <a class="x" href="#ASC1"  >ASC1</a>
-1C6C:11 3A          320             DW  <a class="x" href="#AEC1"  >AEC1</a>
-1C6E:69 3A          321             DW  <a class="x" href="#PSC1"  >PSC1</a>
-1C70:94 3A          322             DW  <a class="x" href="#PEC1"  >PEC1</a>
-1C72:00 3D          323             DW  <a class="x" href="#ASC2"  >ASC2</a>
-1C74:A8 3F          324             DW  <a class="x" href="#AEC2"  >AEC2</a>
-1C76:C8 3F          325             DW  <a class="x" href="#SDP1"  >SDP1</a>                                        ; Start Dos Patch
-1C78:FF 3F          326             DW  <a class="x" href="#EDP1"  >EDP1</a>                                        ; End Dos Patch
-1C7A:1D             327 <a class="d" name="RSPAGE"     id="RSPAGE"     >RSPAGE      </a>DFB &lt;<a class="v" href="#START">START</a>                                      ; (Source) Relocation Start Page $1D00
-1C7B:40             328 <a class="d" name="REPAGE"     id="REPAGE"     >REPAGE      </a>DFB &lt;<a class="v" href="#ENDOFDOS">ENDOFDOS</a>                                   ; (Source) Relocation End+1 Page $4000
+1C6A:00 38          319             DW  <a class="x" href="#ASC1"  >ASC1  </a>                                      ; [4]
+1C6C:11 3A          320             DW  <a class="x" href="#AEC1"  >AEC1  </a>
+1C6E:69 3A          321             DW  <a class="x" href="#PSC1"  >PSC1  </a>                                      ; [5]
+1C70:94 3A          322             DW  <a class="x" href="#PEC1"  >PEC1  </a>
+1C72:00 3D          323             DW  <a class="x" href="#ASC2"  >ASC2  </a>                                      ; [6]
+1C74:A8 3F          324             DW  <a class="x" href="#AEC2"  >AEC2  </a>
+1C76:C8 3F          325             DW  <a class="x" href="#SDP1"  >SDP1  </a>                                      ; [7] Start Dos Patch
+1C78:FF 3F          326             DW  <a class="x" href="#EDP1"  >EDP1  </a>                                        ;   End Dos Patch
+1C7A:1D             327 <a class="d" name="RSPAGE"     id="RSPAGE"     >RSPAGE      </a>DFB &lt;<a class="v" href="#START">START</a>                                      ; [8] (Source) Relocation Start Page $1D00
+1C7B:40             328 <a class="d" name="REPAGE"     id="REPAGE"     >REPAGE      </a>DFB &lt;<a class="v" href="#ENDOFDOS">ENDOFDOS</a>                                   ;     (Source) Relocation End+1 Page $4000
                     329 ;
 1C7C:00             330 <a class="d" name="NSPAGE"     id="NSPAGE"     >NSPAGE      </a>DFB 0
 1C7D:00             331 <a class="d" name="NEPAGE"     id="NEPAGE"     >NEPAGE      </a>DFB 0
