--- a/dos33.html
+++ b/dos33.html
@@ -490,7 +490,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1B4C:68             154 <a class="f" name="DR2B"        >DR2B        </a>PLA             ; ORIGINAL HIMEM PROVED GOOD
 1B4D:81 42          155             STA (<a class="v" href="#ZPGFCB">ZPGFCB</a>,X)  ;RESTORE BYTE ORIGINALLY MESSED WITH.
 1B4F:A4 41          156             LDY <a class="v" href="#ZPGWRK" >ZPGWRK</a>+1    ;END OF PATCH   *****           ; ***** = END_PATCH
-1B51:C8             157 <a class="f" name="DR2C"        >DR2C        </a>INY             ; NEW END OF DOS
+1B51:C8             157 <a class="f" name="DR2C"        >DR2C        </a>INY             ; NEW END OF DOS                ; Y = $BF
 1B52:8C 7D 1C       158             STY <a class="v" href="#NEPAGE">NEPAGE</a>
 1B55:38             159             SEC
 1B56:98             160             TYA
@@ -513,9 +513,9 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <hr>1B76:A2 00          177             LDX #<span class="adr">0</span>                                          ; === Page <a class="page" name="page113">113</a> ===
 1B78:86 40          178             STX ZPGWRK
                     179 <a class="f" name="DR3"         >DR3         </a>EQU *
-1B7A:BD 29 1C       180             LDA ADRTAB+1,X                                  ; If only we had an ($BC) LDY ADRTAB+1,X instruction ... 
-1B7D:A8             181             TAY                                             ; <a class="mem" name="_1B7D">wastes</a> 1 byte; ... for this useless instruction
-1B7E:BD 2A 1C       182             LDA ADRTAB+2,X                                  ; Evidently of the code quality to come. :-/
+1B7A:BD 29 1C       180             LDA ADRTAB+1,X                                  ; [lo] If only we had an ($BC) LDY ADRTAB+1,X instruction ...
+1B7D:A8             181             TAY                                             ; <a class="mem" name="_1B7D">wastes</a> 1 byte; ... to skip this useless instruction.
+1B7E:BD 2A 1C       182             LDA ADRTAB+2,X                                  ; [hi]               Evident code quality to come. :-/
 1B81:85 41          183             STA ZPGWRK+1
 1B83:4C 93 1B       184             JMP DR5                                         ; <a class="mem" name="_1B83">wastes</a> 1 byte; BNE
                     185 ;
@@ -524,13 +524,28 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     188             LDA (ZPGWRK),Y
                     189             ADC DELTA
                     190             STA (ZPGWRK),Y
-                    191             INY
+                    191             INY                                             ; Line #<a class="line" href="#RELOCTR.203">203</a>
                     192             BNE DR5
                     193             INC ZPGWRK+1
 ####:C8             194 <a class="f" name="DR5"         >DR5         </a>INY
-
+                    195             BNE DR6
+                    196             INC ZPGWRK+1
+                    197 ;
                     198 <a class="f" name="DR6"         >DR6         </a>EQU *
-
+                    199             LDA ZPGWRK+1
+                    200             CMP ADRTAB+4,X                                  ; Peek ahead to start of next entry
+                    201             BCC DR4
+                    202             TYA
+                    <a class="line" name="RELOCTR.203">203</a>             CMP ADRTAB+3,X
+                    204             BCC DR4
+                    205 ;
+                    206             TXA
+                    207             CLC
+                    208             ADC #4
+                    209             TAX
+                    210             CPX ADRTAB                                      ; Done all bytes?
+                    211             BCC DR3
+                    212             PAGE
                     213 ;
                     214 ;RELOCATE CODE
                     215 ;
