--- a/dos33.html
+++ b/dos33.html
@@ -732,7 +732,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1D1A:60 1F          024             DW COS5-1
 1D1C:70 1F          025             DW COS6-1
                     026 ;COMMAND EXECUTION TABLE
-                    027 CMDETB      EQU *                                           ; /sarcasm Yay for crappy 6 letter var names
+                    027 CMDETB      EQU *                                           ; /sarcasm Yay for crappy 5 &amp; 6 letter var names
 1D1E:4E 25          028             DW EINIT-1
 1D20:12 24          029             DW ELOAD-1
 1D22:96 23          030             DW ESAVE-1
@@ -766,50 +766,51 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     058 ;
                     059 ;NON-RELOCATING ADRS                                        ;  *note* Annotating [-] to mean <i>addresss is not relocated</i>
                     060 ;
-                    061 IBASVT      EQU *                                           ; <i>ACTIVE</i> table but <a class='mem' name='_1D56'>waste</a> disk space (12 bytes @ $56) storing it!
-1D56:36 E8          062 CHAIN       DW IBCHN                                        ; [-] Really? Forces <i>another</i> table entry [1] in <a class='v' href='#ADRTAB'>ADRTAB</a>
-1D58:E5 24          063 RUN         DW IBRUN                                        ;     People, repeat after me: You **group**
-1D5A:E3 E3          064 BREAK       DW IBBRK                                        ;         CONST data together
-1D5C:00 E0          065 GO          DW IBGO                                         ;         VARIABLE data together
-1D5E:03 E0          066 CONT        DW IBCONT       ; BASIC CONT ENTRY POINT        ;     You (almost) *never* interleave them
-1D60:00 00          067 ASEQ        DW 0                                            ;     that just leads to data+code bloat
-                                                                                    ; *sigh* Too lazy to add empty ';' line seperator ???
+                    061 <a class='d' name='IBASVT'>IBASVT      </a>EQU *                                           ; <i>ACTIVE</i> table but <a class='mem' name='_1D56'>waste</a> disk space (12 bytes @ $56) storing it!
+1D56:36 E8          062 <a class='d' name='CHAIN' >CHAIN       </a>DW IBCHN                                        ; [-] Really? Forces <i>another</i> table entry [1] in <a class='v' href='#ADRTAB'>ADRTAB</a>
+1D58:E5 24          063 <a class='d' name='RUN'   >RUN         </a>DW IBRUN                                        ;     People, repeat after me: You **group**
+1D5A:E3 E3          064 <a class='d' name='BREAK' >BREAK       </a>DW IBBRK                                        ;         CONST data together
+1D5C:00 E0          065 <a class='d' name='GO'    >GO          </a>DW IBGO                                         ;         VARIABLE data together
+1D5E:03 E0          066 <a class='d' name='CONT'  >CONT        </a>DW IBCONT       ; BASIC CONT ENTRY POINT        ;     You (almost) *never* interleave them
+1D60:00 00          067 <a class='d' name='ASEQ'  >ASEQ        </a>DW 0                                            ;     that just leads to data+code bloat
+                                                                                    ; *sigh* Too lazy to add empty ';' line seperator before IBVT ???
                                                                                     ; Intentionally adding empty line as spacer to improve readability *<b>shock</b>*
+                                                                                    ;
                                                                                     ; The IBVT, AS1VT, and AS2VT are Read-Only (after being relocated)
-1D62:36 E8          068 IBVT        DW IBCHN                                        ; <i>CONST</i> Integer Basic Vector Table
-1D64:E5 25          069             DW IBRUN
-1D66:E3 E3          070             DW IBBRK
-1D68:00 E0          071             DW IBGO
-1D6A:03 E0          072             DW IBCONT
-                    073 IBVTL       EQU *-<a class='v' href='IBVT'>IBVT</a>                                      ; Length = $A bytes so we don't over-write ASEQ
-                    074 ;
-1D6C:FC 24          075 <a class="d" name="AS1VT"    >AS1VT       </a>DW <a class='x' href='#ASRUN1'>ASRUN1</a>                                       ; <i>CONST</i> /sarcasm Because it is obvious
-1D6E:FC 24          076             DW <a class='x' href='#ASRUN1' >ASRUN1 </a>                                      ;        1 = ROM, and
-1D70:65 D8          077             DW <a class='x' href='#ASBRK1' >ASBRK1 </a>                                      ;        2 = RAM, right?
-1D72:00 E0          078             DW <a class='x' href='#IBGO'   >IBGO   </a>                                      ; /sarcasm because ASCNTU1 and ASRSEQ1 are obvious
-1D74:3C D4          079             DW <a class='x' href='#ASCNTU1'>ASCNTU1</a>                                      ; Applesoft <a href='http://jamtronix.com/files/applesoft.html#RESTART'  >RESTART</a> or <a href='http://www.txbobsc.com/scsc/scdocumentor/D365.html'>S-C DocuMentor $D365</a>
+1D62:36 E8          068 <a class='d' name='IBVT'     >IBVT        </a>DW <a class='x' href='#IBCHN'>IBCHN</a>                                        ; <i>CONST</i> Integer Basic Vector Table
+1D64:E5 25          069             DW <a class='x' href='#IBRUN' >IBRUN </a>
+1D66:E3 E3          070             DW <a class='x' href='#IBBRK' >IBBRK </a>
+1D68:00 E0          071             DW <a class='x' href='#IBGO'  >IBGO  </a>
+1D6A:03 E0          072             DW <a class='x' href='#IBCONT'>IBCONT</a>
+                    073 <a class='d' name='IBVTL'    >IBVTL       </a>EQU *-<a class='v' href='#IBVT'>IBVT</a>                                      ; Length = $A bytes so we don't over-write ASEQ
+                    074 ;                                                           ; /sarcasm Because it is obvious
+1D6C:FC 24          075 <a class="d" name="AS1VT"    >AS1VT       </a>DW <a class='x' href='#ASRUN1'>ASRUN1</a>                                       ; <i>CONST</i> 1 = ROM, and
+1D6E:FC 24          076             DW <a class='x' href='#ASRUN1' >ASRUN1 </a>                                      ;       2 = RAM, right?
+1D70:65 D8          077             DW <a class='x' href='#ASBRK1' >ASBRK1 </a>                                      ;       ASCNTU1 (Continue) <a href='http://www.txbobsc.com/scsc/scdocumentor/D365.html'>S-C DocuMentor $D365</a>
+1D72:00 E0          078             DW <a class='x' href='#IBGO'   >IBGO   </a>                                      ;       ASRSEQ1 (???)
+1D74:3C D4          079             DW <a class='x' href='#ASCNTU1'>ASCNTU1</a>                                      ; Why not IBCONT??? $E003: JMP $D43C ; Applesoft (Warm) <a href='http://jamtronix.com/files/applesoft.html#RESTART'  >RESTART</a> 
 1D76:F2 D4          080             DW <a class='x' href='#ASRSEQ1'>ASRSEQ1</a>                                      ; Applesoft <a href='http://jamtronix.com/files/applesoft.html#FIX.LINKS'>FIX.LINKS</a>
-                    081 <a class="d" name="AS1VTL"   >AS1VTL      </a>EQU *-<a class='v' href='AS1VT'>AS1VT</a>
-                    082 ;                                                           ;  copied into <a class="v" href="#IBASVT">IBASVT</a> via <a class="x" href=#"INITC">INITC</a>
-1D78:06 25          083 <a class="d" name="AS2VT"    >AS2VT       </a>DW <a class="x" href="#ASRUN2">ASRUN2</a>                                       ; <i>CONST</i> *<a class="mem" name="_1D78">wastes</a>* 12 bytes on 48K
-1D7A:06 25          084             DW <a class="x" href="#ASRUN2" >ASRUN2 </a>                                      ; Type 2: AppleSoft in RAM Vector Table (early Apple ][ ???)
+                    081 <a class="d" name="AS1VTL"   >AS1VTL      </a>EQU *-<a class='v' href='#AS1VT'>AS1VT</a>
+                    082 ;                                                           ; copied into <a class="v" href="#IBASVT">IBASVT</a> via INIT_AS_RAM, oh wait, <a class="x" href=#"INITC">INITC</a> 
+1D78:06 25          083 <a class="d" name="AS2VT"    >AS2VT       </a>DW <a class="x" href="#ASRUN2">ASRUN2</a>                                       ; <i>CONST</i> *<a class="mem" name="_1D78">wastes</a>* 12 bytes on Apple ][+ or newer
+1D7A:06 25          084             DW <a class="x" href="#ASRUN2" >ASRUN2 </a>                                      ; Type 2: AppleSoft in RAM Vector Table (early Apple 1 or ][ ???)
 1D7C:67 10          085             DW <a class="x" href="#ASBRK2" >ASBRK2 </a>                                      ;
 1D7E:84 1D          086             DW <a class="x" href="#DBINIT" >DBINIT </a>                                      ;
-1D80:3C 0C          087             DW <a class="x" href="#ASCNTU2">ASCNTU2</a>                                      ;
+1D80:3C 0C          087             DW <a class="x" href="#ASCNTU2">ASCNTU2</a>                                      ; Continue (Warm Restart) and R*s*E*q ???
 1D82:F2 0C          088             DW <a class="x" href="#ASRSEQ2">ASRSEQ2</a>                                      ; See Official source Line #70 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L70'>RESTART</a> and Line #270 <a href='https://github.com/mist64/msbasic/blob/master/program.s#L270'>FIX LINKS</a>
                     089 <a class="d" name="AS2VTL"   >AS2VTL      </a>EQU *-<a class="v" href="#AS2VT">AS2VT</a>
                     090             PAGE
                     091 ;
                     092 ; DOS BASIC INTERPRETER - INITIAL ENTRY
                     093 ;
-                    094 <a class='x' name='SC1'      >SC1         </a>EQU *                                          ; Start Relocate Code 1
+                    094 <a class='x' name='SC1'      >SC1         </a>EQU *                                           ; Start Relocate Code 1
                     095 <a class='x' name='DBINIT'   >DBINIT      </a>EQU *
 1D84:AD E9 37       096             LDA <a class='v' href='#IBSLOT'>IBSLOT</a>      ; GET BOOT SLOT
-1D87:4A             097             LSR A
-1D88:4A             098             LSR A
-1D89:4A             099             LSR A
-1D8A:4A             100             LSR A                                           ; /sarcasm Gee, maybe we wouldn't even need the next comment
-1D8B:8D 6A 2A       101             STA <a class='v' href='#CS'>CS</a>          ; SET AS CUURENT SLOT           ; *spelling* CURRENT; if we labled it CUR_SLOT
+1D87:4A             097             LSR A                                           ; /sarcasm Gee, maybe we wouldn't even <i>need</i> the next comment
+1D88:4A             098             LSR A                                           ;          if we <b>used good variable names</b> such as CUR_SLOTx16
+1D89:4A             099             LSR A                                           ;          but who would want that? Isn't it <i>obvious</i> that
+1D8A:4A             100             LSR A                                           ;          CS means Current Slot * 16 !?
+1D8B:8D 6A 2A       101             STA <a class='v' href='#CS'>CS</a>          ; SET AS CUURENT SLOT           ; *spelling* CURRENT
                     102 
                     103 
                     104 
