More links for DOSINIT

--- a/dos33.html
+++ b/dos33.html
@@ -715,63 +715,63 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     007 <a class="d" name="START"      >START       </a>EQU *
                     008 <a class="d" name="SAT1"       >SAT1        </a>EQU *
 1D00:D3 1C          009 <a class="d" name="FTAB"       >FTAB        </a>DW *-45                                         ; = $1CD3; Really? Couldn't do <span class="macro">FTAB DS 45, 0</span>
-1D02:81 1E          010 <a class="d" name="CINA"       >CINA        </a>DW CHRIN
-1D04:BD 1E          011 <a class="d" name="COUTA"      >COUTA       </a>DW CHROUT
-1D06:75 2A          012 <a class="d" name="FN1ADR"     >FN1ADR      </a>DW FNAME1
-1D08:93 2A          013 <a class="d" name="FN2ADR"     >FN2ADR      </a>DW FNAME2
-1D0A:60 2A          014 <a class="d" name="SVBLA"      >SVBLA       </a>DW SVBL
-1D0C:00 1B          015 <a class="d" name="ASTART"     >ASTART      </a>DW <a class="x" href="#BEGIN">BEGIN</a>
-1D0E:BB 35          016 <a class="d" name="CCBADR"     >CCBADR      </a>DW CCB
+1D02:81 1E          010 <a class="d" name="CINA"       >CINA        </a>DW <a class='x' href='#CHRIN' >CHRIN </a>
+1D04:BD 1E          011 <a class="d" name="COUTA"      >COUTA       </a>DW <a class='x' href='#CHROUT'>CHROUT</a>
+1D06:75 2A          012 <a class="d" name="FN1ADR"     >FN1ADR      </a>DW <a class='v' href='#FNAME1'>FNAME1</a>
+1D08:93 2A          013 <a class="d" name="FN2ADR"     >FN2ADR      </a>DW <a class='v' href='#FNAME2'>FNAME2</a>
+1D0A:60 2A          014 <a class="d" name="SVBLA"      >SVBLA       </a>DW <a class='v' href='#SVBL'  >SVBL  </a>
+1D0C:00 1B          015 <a class="d" name="ASTART"     >ASTART      </a>DW <a class='x' href="#BEGIN" >BEGIN </a>
+1D0E:BB 35          016 <a class="d" name="CCBADR"     >CCBADR      </a>DW <a class='v' href='#CCB'   >CCB   </a>
                     017 ;
-                    018 OUTSVT      EQU *           ; CHAR OUTPUT STATE VECTOR TABLE
-1D10:EA 1E          019             DW COS0-1
-1D12:11 1F          020             DW COS1-1
-1D14:22 1F          021             DW COS2-1
-1D16:2E 1F          022             DW COS3-1
-1D18:51 1F          023             DW COS4-1
-1D1A:60 1F          024             DW COS5-1
-1D1C:70 1F          025             DW COS6-1
+                    018 <a class='d' name='OUTSVT'>OUTSVT      </a>EQU *           ; CHAR OUTPUT STATE VECTOR TABLE
+1D10:EA 1E          019             DW <a class='x' href='#COS0'>COS0</a>-1
+1D12:11 1F          020             DW <a class='x' href='#COS1'>COS1</a>-1
+1D14:22 1F          021             DW <a class='x' href='#COS2'>COS2</a>-1
+1D16:2E 1F          022             DW <a class='x' href='#COS3'>COS3</a>-1
+1D18:51 1F          023             DW <a class='x' href='#COS4'>COS4</a>-1
+1D1A:60 1F          024             DW <a class='x' href='#COS5'>COS5</a>-1
+1D1C:70 1F          025             DW <a class='x' href='#COS6'>COS6</a>-1
                     026 ;COMMAND EXECUTION TABLE
-                    027 CMDETB      EQU *                                           ; /sarcasm Yay for shitty 5 &amp; 6 letter var names!
-1D1E:4E 25          028             DW EINIT-1
-1D20:12 24          029             DW ELOAD-1
-1D22:96 23          030             DW ESAVE-1
-1D24:D0 24          031             DW ERUN-1
-1D26:EF 24          032             DW ECHAIN-1
-1D28:62 22          033             DW EDEL-1
+                    027 <a class='d' name='CMDETB'>CMDETB      </a>EQU *                                           ; /sarcasm Yay for shitty 5 &amp; 6 letter var names!
+1D1E:4E 25          028             DW <a class='x' href='#EINIT'>EINIT</a>-1                                      ; *dumb* 6502 design for RTS instruction forces <span class="macro">-1</span>
+1D20:12 24          029             DW <a class='x' href='#ELOAD'>ELOAD</a>-1
+1D22:96 23          030             DW <a class='x' href='#ESAVE'>ESAVE</a>-1
+1D24:D0 24          031             DW <a class='x' href='#ERUN'>ERUN</a>-1
+1D26:EF 24          032             DW <a class='x' href='#ECHAIN'>ECHAIN</a>-1
+1D28:62 22          033             DW <a class='x' href='#EDEL'>EDEL</a>-1
 1D2A:70 22          034             DW <a class='x' href='#ELOCK'>ELOCK</a>-1
 1D2C:74 22          035             DW <a class='x' href='#EUNLK'>EUNLK</a>-1                                      ; /sarcasm Oh, noes! That 'OC' is too much work!
-1D2E:E9 22          036             DW ECLOSE-1
-1D30:1A 25          037             DW EREAD-1
-1D32:C5 25          038             DW EEXEC-1
-1D34:0F 25          039             DW EWRITE-1
-1D36:DC 25          040             DW EPOS-1
-1D38:A2 22          041             DW EOPEN-1
-1D3A:97 22          042             DW EAPND-1
-1D3C:80 22          043             DW EREN-1
-1D3E:6D 25          044             DW ECAT-1
-1D40:32 22          045             DW EMON-1
-1D42:3C 22          046             DW ENOMON-1
-1D44:28 22          047             DW EPR-1
-1D46:2D 22          048             DW EIN-1
-1D48:50 22          049             DW EMAXF-1
-1D4A:79 25          050             DW EAS-1
-1D4C:9D 25          051             DW EINT-1
-1D4E:30 23          052             DW EBSV-1                                       ; *sigh* EBSAVE - I'm sorry, we blew our key budget for A,E
-1D50:5C 23          053             DW EBLD-1                                       ; *sigh* EBLOAD - and for O,A
-<hr>1D52:8D 23          054             DW EBRUN-1                                      ; === Page <a class="page" name="page49">49</a> ===
-1D54:7C 22          055             DW EVAR-1
+1D2E:E9 22          036             DW <a class='x' href='#ECLOSE'>ECLOSE</a>-1
+1D30:1A 25          037             DW <a class='x' href='#EREAD'>EREAD</a>-1
+1D32:C5 25          038             DW <a class='x' href='#EEXEC'>EEXEC</a>-1
+1D34:0F 25          039             DW <a class='x' href='#EWRITE'>EWRITE</a>-1
+1D36:DC 25          040             DW <a class='x' href='#EPOS'>EPOS</a>-1
+1D38:A2 22          041             DW <a class='x' href='#EOPEN'>EOPEN</a>-1
+1D3A:97 22          042             DW <a class='x' href='#EAPND'>EAPND</a>-1
+1D3C:80 22          043             DW <a class='x' href='#EREN'>EREN</a>-1
+1D3E:6D 25          044             DW <a class='x' href='#ECAT'>ECAT</a>-1
+1D40:32 22          045             DW <a class='x' href='#EMON'>EMON</a>-1
+1D42:3C 22          046             DW <a class='x' href='#ENOMON'>ENOMON</a>-1
+1D44:28 22          047             DW <a class='x' href='#EPR'>EPR</a>-1
+1D46:2D 22          048             DW <a class='x' href='#EIN'>EIN</a>-1
+1D48:50 22          049             DW <a class='x' href='#EMAXF'>EMAXF</a>-1
+1D4A:79 25          050             DW <a class='x' href='#EAS'>EAS</a>-1
+1D4C:9D 25          051             DW <a class='x' href='#EINT'>EINT</a>-1
+1D4E:30 23          052             DW <a class='x' href='#EBSV'>EBSV</a>-1                                       ; *sigh* EBSAVE - I'm sorry, we blew our key budget for A,E
+1D50:5C 23          053             DW <a class='x' href='#EBLD'>EBLD</a>-1                                       ; *sigh* EBLOAD - and for O,A
+<hr>1D52:8D 23          054             DW <a class='x' href='#EBRUN'>EBRUN</a>-1                                      ; === Page <a class="page" name="page49">49</a> ===
+1D54:7C 22          055             DW <a class='x' href='#EVAR'>EVAR</a>-1
                     056 <a class='d' name='EAT1'>EAT1        </a>EQU *                                           ; = $1D56
                     057             PAGE
                     058 ;
                     059 ;NON-RELOCATING ADRS                                        ;  *note* Annotating [-] to mean <i>addresss is not relocated</i>
                     060 ;
                     061 <a class='d' name='IBASVT'>IBASVT      </a>EQU *                                           ; <i>ACTIVE</i> table but <a class='mem' name='_1D56'>waste</a> disk space (12 bytes @ $56) storing it!
-1D56:36 E8          062 <a class='d' name='CHAIN' >CHAIN       </a>DW IBCHN                                        ; [-] Really? Forces <i>another</i> table entry [1] in <a class='v' href='#ADRTAB'>ADRTAB</a>
-1D58:E5 24          063 <a class='d' name='RUN'   >RUN         </a>DW IBRUN                                        ;     People, repeat after me: You **group**
-1D5A:E3 E3          064 <a class='d' name='BREAK' >BREAK       </a>DW IBBRK                                        ;         CONST data together
-1D5C:00 E0          065 <a class='d' name='GO'    >GO          </a>DW IBGO                                         ;         VARIABLE data together
-1D5E:03 E0          066 <a class='d' name='CONT'  >CONT        </a>DW IBCONT       ; BASIC CONT ENTRY POINT        ;     You (almost) *never* interleave them
+1D56:36 E8          062 <a class='d' name='CHAIN' >CHAIN       </a>DW <a class='x' href='#IBCHN' >IBCHN </a>                                       ; [-] Really? Forces <i>another</i> table entry [1] in <a class='v' href='#ADRTAB'>ADRTAB</a>
+1D58:E5 24          063 <a class='d' name='RUN'   >RUN         </a>DW <a class='x' href='#IBRUN' >IBRUN </a>                                       ;     Repeat after me: You **group**
+1D5A:E3 E3          064 <a class='d' name='BREAK' >BREAK       </a>DW <a class='x' href='#IBBRK' >IBBRK </a>                                       ;         CONST data together THEN
+1D5C:00 E0          065 <a class='d' name='GO'    >GO          </a>DW <a class='x' href='#IBGO'  >IBGO  </a>                                       ;         VARIABLE data together
+1D5E:03 E0          066 <a class='d' name='CONT'  >CONT        </a>DW <a class='x' href='#IBCONT'>IBCONT</a>       ; BASIC CONT ENTRY POINT        ;     You (almost) *never* interleave them
 1D60:00 00          067 <a class='d' name='ASEQ'  >ASEQ        </a>DW 0                                            ;     that just leads to data+code bloat
                                                                                     ; *sigh* Too lazy to add empty ';' line seperator before IBVT ???
                                                                                     ; Intentionally adding empty line as spacer to improve readability *<b>shock</b>*
